# lab2-osi

./: CMakeLists.txt  Testi.cpp  lab2.cpp  lab2.h  test1.cpp
cache/: lab2.cpp  lab2.h
